--- a/main.tex
+++ b/main.tex
@@ -1,11 +1,13 @@
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 % Defining all packages that are used in this document
 \input{Misc/preamble.tex}
-%\linespread{1.5}
+%\linespread{1}
+\usepackage{setspace}
+\singlespacing %单倍行距
 \renewcommand{\baselinestretch}{1.5}
 \title{
-    Lab Experiment \\
-    Beam Bending
+    Plastic Collapse of Portal Frame Lab  \\
+    Group T05
     }
 \author{
 	Jiaqi, Yao.%\footnote{jy431@exeter.ac.uk}
@@ -26,10 +28,11 @@
 \pagenumbering{arabic} % Turn on normal pagenumbering
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Main contents - Do NOT write your text in main.tex! Use                     the tex files in the folders below
-\input{Introduction/A.tex}
-\input{Introduction/B.tex}
-\input{Introduction/C.tex}
-\input{Introduction/D.tex}
+\input{Introduction/Introduction.tex}
+\input{Introduction/Experiment.tex}
+\input{Introduction/Theory.tex}
+\input{Introduction/Analysis.tex}
+\input{Conclusion/conclusion.tex}
 
 %\input{Misc/list_of_symbols}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
