--- a/Introduction/Introduction.tex
+++ b/Introduction/Introduction.tex
@@ -1,6 +1,36 @@
-\section{Section A}
-\label{sec:Section A}
+\section{Introduction}
+
 \FloatBarrier % Now figures cannot float above section title
+
+
+The purpose of this experiment is to investigate the behaviour of a mild steel portal frame model when subjected to increasing loads.
+
+The rig consists of a loading system that applies a vertical load at the center of the beam and a horizontal load at the top of one column. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\iffalse
 
 
 In this section, the Young's modulus of two materials 
@@ -103,3 +133,5 @@ in the modulus of elasticity,
 which may be due to experimental error, and the more accurate 
 modulus of elasticity can be obtained through more 
 experiments.
+
+\fi
