--- a/Introduction/Theory.tex
+++ b/Introduction/Theory.tex
@@ -1,5 +1,4 @@
-\section*{Section C}
-\label{sec:Section C}
+\section{Theory}
 \FloatBarrier % Now figures cannot float above section title
 
 In this section, finite element analysis (ANSYS) is performed on the components.
