--- a/Introduction/Experiment.tex
+++ b/Introduction/Experiment.tex
@@ -1,6 +1,64 @@
-\section*{Section B}
-\label{sec:Section B}
+\section{Experiment}
 \FloatBarrier % Now figures cannot float above section title
+
+The frame is made of mild steel and has a uniform rectangular cross-section. Also, The rig is equipped with two gauges to monitor the horizontal deflection of the beam and its central vertical deflection.
+
+The experimental parameters are shown in the following table.\ref{t1}
+
+\begin{minipage}[htbp]{\textwidth}
+    \makeatletter\def\@captype{table}
+    \centering
+    \scalebox{1}{
+        \begin{tabular}{lllll}
+            \hline
+            Data type &Height & Length & Thickness & Width \\ \hline
+            Theory&200    & 300    & 3.3      & 13 \\ 
+            Actual&200    & 304    & 3.27      & 12.97 \\ \hline
+            \end{tabular}} 
+
+    (Unit: mm)
+    \caption{Experiment parameters}
+    \label{t1} 
+\end{minipage}
+
+
+The experiment entails the following steps:
+\begin{enumerate}
+    \item Measure and record the dimensions of the frame and its cross-section.
+
+    \item Ensure the loading rig is in proper working condition and inspect cables for damage.
+    
+    \item Zero the force and displacement readings while the rig is still unloaded.
+    
+    \item Gradually apply increasing horizontal and vertical loads to the frame in increments of 10 N.
+    
+    \item Record the applied forces and corresponding deflections for each increment.
+    
+    \item Continue the process until a plastic failure occurs, and observe the formation of plastic hinges and position.
+    
+    \item Unload the frame and identify the locations of plastic hinges by observing permanent rotation in the joints.
+    
+\end{enumerate}
+
+
+\begin{minipage}[htbp]{\textwidth}
+    \makeatletter\def\@captype{table}
+    \centering
+    \scalebox{0.85}{
+        \begin{tabular}{ccccccccccccccc}
+            \hline
+            \multirow{2}{*}{Force(N)}    & Vertical   & 10   & 20   & 30   & 40   & 50   & 60   & 70   & 80   & 90   & 100  & 110  & 120   & 130   \\
+                                      & Horizontal & 10   & 20   & 30   & 40   & 50   & 60   & 70   & 80   & 90   & 100  & 110  & 120   & 130   \\ \hline
+            \multirow{2}{*}{Distance(mm)} & Vertical   & 0.06 & 0.05 & 0.1  & 1.42 & 2.13 & 2.26 & 2.8  & 3.22 & 3.62 & 4.28 & 5.23 & 7.46  & 12.88 \\
+                                      & Horizontal & 0.88 & 1.58 & 2.15 & 2.99 & 4.04 & 4.44 & 5.06 & 6.48 & 7.63 & 8.55 & 9.31 & 15.05 & 23.08 \\ \hline
+            \end{tabular}} 
+    \caption{Record data}
+    \label{t1} 
+\end{minipage}
+
+
+
+\iffalse
 In this section, the deformation of each material under different 
 forces can be calculated from the data obtained in section A.
 
@@ -36,3 +94,4 @@ Using the $E_{exp}$(172.67GPa and 63.75GPa) in different material(Mild Steel and
 Bringing the average modulus of elasticity into the equation enables 
 a more accurate calculation of the deformation of the material under 
 different forces and helps to reduce experimental errors.
+\fi
