--- a/Misc/preamble.tex
+++ b/Misc/preamble.tex
@@ -17,6 +17,7 @@
 \usepackage[version=4]{mhchem} % \ce{} to write chemical eq.
 \usepackage{siunitx}   % Ex: \si{\meter\per\square\second}
 \usepackage{booktabs}  % Behind-the-scenes optimization of tables. \toprule, \midrule, \bottomrule
+\usepackage{multirow}
 \usepackage{hyperref}  % Ability to click on references like equations, figures, sections etc. \ref{eq:my_eq} clickable
 \hypersetup{
     colorlinks,
@@ -25,6 +26,7 @@
     linkcolor=black,
     urlcolor=black
 }
+\iffalse
 \usepackage{fancyhdr}
 	%fancyhdr：一个很强大的宏包，用于自定义设计页面风格并命名以供调用。
 	\pagestyle{fancy}
@@ -34,8 +36,8 @@
 	\rfoot{\today}
 		%分别是右页眉、左页眉、中页脚、右页脚
 	\renewcommand{\headrulewidth}{0pt}
-	\renewcommand{\theenumi}{(\arabic{enumi})}
-
+	%\renewcommand{\theenumi}{(\arabic{enumi})}
+\fi
 
 \usepackage[autolinebreaks,useliterate,numbered]{mcode} % Ability to paste smooth MATLAB code
 \newcommand{\figref}[1]{\figurename~\ref{#1}} %Nice reference to figures
