--- a/Introduction/Experiment.tex
+++ b/Introduction/Experiment.tex
@@ -1,9 +1,9 @@
 \section{Experiment}
 \FloatBarrier % Now figures cannot float above section title
 
-The frame is made of mild steel and has a uniform rectangular cross-section. Also, The rig is equipped with two gauges to monitor the horizontal deflection of the beam and its central vertical deflection.
+The frame is made of mild steel and has a uniform rectangular cross-section. Also, The rig is equipped with two gauges to monitor the horizontal deflection of the beam and its central vertical deflection. The yield strenth of the steel is 250MPa.
 
-The experimental parameters are shown in the following table.\ref{t1}
+The experimental parameters are shown in the following table \autoref{t1}.
 
 \begin{minipage}[htbp]{\textwidth}
     \makeatletter\def\@captype{table}
@@ -40,6 +40,7 @@ The experiment entails the following steps:
     
 \end{enumerate}
 
+Here are the recorded data \autoref{t2}.
 
 \begin{minipage}[htbp]{\textwidth}
     \makeatletter\def\@captype{table}
@@ -53,7 +54,7 @@ The experiment entails the following steps:
                                       & Horizontal & 0.88 & 1.58 & 2.15 & 2.99 & 4.04 & 4.44 & 5.06 & 6.48 & 7.63 & 8.55 & 9.31 & 15.05 & 23.08 \\ \hline
             \end{tabular}} 
     \caption{Record data}
-    \label{t1} 
+    \label{t2} 
 \end{minipage}
 
 
