--- a/Introduction/Theory.tex
+++ b/Introduction/Theory.tex
@@ -23,16 +23,19 @@ There are three cases of collapse of plasticity of portal frame.
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=15cm]{./fig/12.png}
+    \includegraphics[width=10cm]{./fig/12.png}
+    %\caption{plastic modules of rectangular section  }
+    \includegraphics[width=5.5cm]{./fig/13.png}
     %\caption{plastic modules of rectangular section  }
     \label{f2}
 \end{figure}
 
+\subsection*{Beam mechanism}
+If $W>>P$, the hinges are likely to appear in B, C and D.
 
+\subsection*{Sway mechanism}
 
-
-
-
+\subsection*{Combined mechanism}
 
 
 
