--- a/Introduction/Theory.tex
+++ b/Introduction/Theory.tex
@@ -35,9 +35,12 @@ If $W>>P$, the hinges are likely to appear in B, C and D.
 
 \subsection*{Sway mechanism}
 
+If $P>>W$, the hinges are likely to appear in B, C and D.
+
+
 \subsection*{Combined mechanism}
 
-
+If the value of P and W are the same, 
 
 
 
