--- a/Introduction/Theory.tex
+++ b/Introduction/Theory.tex
@@ -15,9 +15,10 @@ yield stress $\sigma_y$ is caculated by:
 
 \begin{equation} 
     M_p=\sigma_y\frac{bd}{2}(\frac{d}{4}+\frac{d}{4})
+    \label{e1}
 \end{equation}
 
-Calculated from the data from \autoref{t1}, we get $M_p=4.33N \cdot m$.
+Calculated from the data from \autoref{t1}, we get $M_p=8.67N \cdot m$.
 
 There are three cases of collapse of plasticity of portal frame. We use virtual work method to caculate it.
 
@@ -65,7 +66,7 @@ $$
 \end{array} \right. 
 $$
 
-Let's plot the relationships P-W on a graph
+Plot the relationships P-W on a graph
 
 \begin{figure}[htbp]
     \centering
@@ -74,9 +75,23 @@ Let's plot the relationships P-W on a graph
     \label{f3}
 \end{figure}
 
+Substitude data from \autoref{t1} and \autoref{e1}, We have $\frac{M_p}{L}=28.9$ and the boundary of the graph is 
+
+$$
+\left\{ \begin{array}{l}
+	W=231.2\\
+	P=173.4\\
+	4P+3W=1040.4\\
+\end{array} \right. 
+$$
 
 
-
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=10cm]{./fig/15.jpg}
+    \caption{Actual graph of P-W}
+    \label{f3}
+\end{figure}
 
 
 
