--- a/Introduction/Theory.tex
+++ b/Introduction/Theory.tex
@@ -70,28 +70,27 @@ Plot the relationships P-W on a graph
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=5cm]{./fig/14.png}
+    \includegraphics[width=6.5cm]{./fig/14.png}
+    \includegraphics[width=8.5cm]{./fig/15.jpg}
     \caption{P-W graph}
     \label{f3}
 \end{figure}
+
+
 
 Substitude data from \autoref{t1} and \autoref{e1}, We have $\frac{M_p}{L}=28.9$ and the boundary of the graph is 
 
 $$
 \left\{ \begin{array}{l}
-	W=231.2\\
-	P=173.4\\
-	4P+3W=1040.4\\
+	W=\frac{8M_p}{L}=231.2\\
+	P=\frac{6M_p}{L}=173.4\\
+	4P+3W=\frac{36M_p}{L}=1040.4\\
 \end{array} \right. 
 $$
 
+Plotting the three boundary lines with the applied load lines ($y=x$) on the graph, the following figure is obtained.
 
-\begin{figure}[htbp]
-    \centering
-    \includegraphics[width=10cm]{./fig/15.jpg}
-    \caption{Actual graph of P-W}
-    \label{f3}
-\end{figure}
+where the coordinates of the load line and the boundary line are (148.63,148.63)
 
 
 
