--- a/Introduction/Theory.tex
+++ b/Introduction/Theory.tex
@@ -27,7 +27,7 @@ There are three cases of collapse of plasticity of portal frame. We use virtual 
     \includegraphics[width=10cm]{./fig/12.png}
     %\caption{plastic modules of rectangular section  }
     \includegraphics[width=5.5cm]{./fig/13.png}
-    %\caption{plastic modules of rectangular section  }
+    \caption{Three cases of collapse of plasticity of portal frame}
     \label{f2}
 \end{figure}
 
@@ -73,7 +73,7 @@ Plot the relationships P-W on a graph
     \includegraphics[width=6.5cm]{./fig/14.png}
     \includegraphics[width=8.5cm]{./fig/15.jpg}
     \caption{P-W graph}
-    \label{f2}
+    \label{f3}
 \end{figure}
 
 
@@ -90,7 +90,7 @@ $$
 
 Plotting the three boundary lines with the applied load lines ($y=x$) on the graph, the following figure is obtained.
 
-where the coordinates of the load line and the boundary line are (148.63,148.63)
+where the coordinates of the load line and the boundary line are (148.63,148.63\label{ee}).
 
 
 
