--- a/Introduction/Experiment.tex
+++ b/Introduction/Experiment.tex
@@ -30,7 +30,7 @@ The experiment entails the following steps:
     
     \item Zero the force and displacement readings while the rig is still unloaded.
     
-    \item Gradually apply increasing horizontal and vertical loads to the frame in increments of 10 N.
+    \item Gradually apply increasing horizontal and vertical loads to the frame in increments of 10 N. The relationships between P and W are $yx=x$.
     
     \item Record the applied forces and corresponding deflections for each increment.
     
@@ -56,43 +56,3 @@ Here are the recorded data \autoref{t2}.
     \caption{Record data}
     \label{t2} 
 \end{minipage}
-
-
-
-\iffalse
-In this section, the deformation of each material under different 
-forces can be calculated from the data obtained in section A.
-
-\subsection*{Analysis}
-
-We know
-\begin{equation} 
-    \delta_{max}=\frac{PL^3}{48EI}=\frac{P*0.1^3}{48*E_{exp}*4.5*10^{-11}}
-\end{equation}
-
-Using the $E_{exp}$(172.67GPa and 63.75GPa) in different material(Mild Steel and Aluminium)
- with different force(50N, 100N, 150N) in Table \ref{t2}, the data in Table \ref{t3} can be calculated.
-
-\begin{minipage}[htbp]{\textwidth}
-    \makeatletter\def\@captype{table}
-    \centering
-    \scalebox{1.1}{
-    \begin{tabular}{lll} 
-        \hline
-        Bending Displacement  & Mild Steel    & Aluminium     \\ \hline
-        $\delta_{AN\_{1}}(P=50N)$ & 0.1341    & 0.3631    \\
-        $\delta_{AN\_{2}}(P=100N)$ & 0.2681     & 0.7262   \\
-        $\delta_{AN\_{3}}(P=150N)$ & 0.4022     & 1.0893  \\ \hline          
-    \end{tabular}} 
-    
-    (Unit: mm)
-    \caption{Experimental results - maximum deformation}
-    \label{t3} 
-\end{minipage}
-
-\subsection*{Summary}
-
-Bringing the average modulus of elasticity into the equation enables 
-a more accurate calculation of the deformation of the material under 
-different forces and helps to reduce experimental errors.
-\fi
