--- a/Conclusion/conclusion.tex
+++ b/Conclusion/conclusion.tex
@@ -1,1 +1,9 @@
 \section{Conclusion}
+
+In conclusion, this experiment allowed us to investigate the behavior of a portal frame under increasing load and compare experimental results with theoretical predictions. We identified plastic hinges, assessed the frame's behavior, and notice the discrepancies between theory and practice, which could stem from material inhomogeneity and differences in test conditions. 
+
+Also, there are a number of aspects that could be improved through this experiment:
+
+$\bullet$ Increase the amount of data for the experiment. The experiment should increase the sampling density which near the plastic deformation point to obtain a more accurate plastic deformation point.
+
+$\bullet$ There is experimental randomness. If conditions permit, it is possible to test more identical modular frameworks, and the resulting data will be more reliable.
