--- a/Introduction/Analysis.tex
+++ b/Introduction/Analysis.tex
@@ -42,7 +42,7 @@ $\bullet$ After the force load, the upper left corner of the frame did not rotat
 
 $\bullet$ The angle of rotation of the plastic collapse occurring at points 1,4 is $\theta$(in \autoref{f2}).
 
-$\bullet$ The angle of rotation of the plastic collapse occurring at points 2,3 is $2\theta$(in \autoref{f2}).
+$\bullet$ The angle of rotation of the plastic collapse occurring at points 2,3 is $2\theta$(in \autoref{f2}), which is double that of points 1,4.
 
 \subsection*{c}
 \subsubsection*{i}
@@ -57,4 +57,12 @@ $\bullet$ Differences in test conditions: The plastic collapse load of a materia
 
 \subsubsection*{ii}
 
+$\bullet$ There are 4 plastic hinges in theory (\autoref{f2}-Combined mechanism). The positions of the plastic hinges are points A, C, D and E.
+
+$\bullet$ There are 4 plastic hinges in experiment (\autoref{f5}). The positions of the plastic hinges are in the position 1,2,3,4.
+
+$\bullet$ Compare with that, it is easy to obtain that the theoretical and practical positions of the plastic hinges are the same.
+
 \subsubsection*{iii}
+
+The overall shape of the measured and predicted collapse mechanism are same. In \autoref{f2} and \autoref{f5}, the upper left corner is not deformed, a rotation of angle $\theta$ occurs at positions 1,4 and a rotation of angle $2\theta$ occurs at positions 2,3.
