--- a/Introduction/Experiment.tex
+++ b/Introduction/Experiment.tex
@@ -30,7 +30,7 @@ The experiment entails the following steps:
     
     \item Zero the force and displacement readings while the rig is still unloaded.
     
-    \item Gradually apply increasing horizontal and vertical loads to the frame in increments of 10 N. The relationships between P and W are $yx=x$.
+    \item Gradually apply increasing horizontal and vertical loads to the frame in increments of 10 N. The relationships between P and W are $y=x$\label{ee1}.
     
     \item Record the applied forces and corresponding deflections for each increment.
     
