--- a/Introduction/Theory.tex
+++ b/Introduction/Theory.tex
@@ -90,6 +90,13 @@ $$
 
 Plotting the three boundary lines with the applied load lines ($y=x$) on the graph, the following figure is obtained.
 
+$$
+\left\{ \begin{array}{l}
+	4P+3W=1040.4\\
+	P=W\\
+\end{array} \right. 
+$$
+The solution to the equation is ($P=W=148.63$)
 where the coordinates of the load line and the boundary line are (148.63,148.63\label{ee}).
 
 
