--- a/Conclusion/conclusion.tex
+++ b/Conclusion/conclusion.tex
@@ -1,9 +1,11 @@
 \section{Conclusion}
 
-In conclusion, this experiment allowed us to investigate the behavior of a portal frame under increasing load and compare experimental results with theoretical predictions. We identified plastic hinges, assessed the frame's behavior, and notice the discrepancies between theory and practice, which could stem from material inhomogeneity and differences in test conditions. 
+In conclusion, this experiment allowed us to study the behavior of a portal frame under gradually increasing loads and compare the experimental results with theoretical predictions. We identified the plastic hinges, assessed the frame's behavior, and noted a discrepancy in the collapse load between theory and practice for the deflection ($23.8\%$), which could be attributed to geometric differences and material imperfections.
 
-Also, there are a number of aspects that could be improved through this experiment:
+From observing \autoref{f4}, it can be seen that the W curve changes very dramatically in the initial stage, which may be due to testing errors and a low sampling frequency. Here are some methods for improvement:
 
-$\bullet$ Increase the amount of data for the experiment. The experiment should increase the sampling density which near the plastic deformation point to obtain a more accurate plastic deformation point.
+$\bullet$ Increase the amount of data for the experiment. The experiment should increase the sampling density to obtain a more accurate point.
 
 $\bullet$ There is experimental randomness. If conditions permit, it is possible to test more identical modular frameworks, and the resulting data will be more reliable.
+
+$\bullet$ Extend the experimental process. If conditions permit, it is possible to try applying larger loads to explore the material's subsequent plastic deformation behavior.
