--- a/Introduction/Analysis.tex
+++ b/Introduction/Analysis.tex
@@ -1,7 +1,7 @@
 \section{Analysis}
 \FloatBarrier % Now figures cannot float above section title
 
-\subsection*{a}
+\subsection*{A : presentation of force vs deformation relationships}
 Using the data in Table 2, the force vs deformation plot can be derived as \autoref{f3}. Also, from the lecture in week 7, we can learn that the total bending moment diagram is as follows
 
 
@@ -20,14 +20,16 @@ $\bullet$ W<110N,P<110N: Elastic deformation: The relationship between the elast
 
 $\bullet$ W$\geq$110N,P$\geq$110N: Plastic deformation: The relationship between force and deformation is nonlinear, i.e., the strain shows a rapid increase with the increase of stress.
 
-From the total moment diagram (\autoref{f3}), it can be seen that the bending moment at point D is the largest, and this point will be the first point in the experiment to achieve plastic deformation.
+From the overall bending moment diagram (see \autoref{f4}), it can be seen that point D has the maximum bending moment, making it the first point in the experiment to experience plastic deformation.
 
-In \autoref{f2}, The P-W graph is piecewise and if the combination of the P and W exceeds the closed figure on the left, The collapse will happen. In this case$(y=x)$, the collapse load for the frame was $W=148.63N,P=148.63N$.
+In \autoref{f3}, The P-W graph is piecewise and if the combination of the P and W exceeds the closed figure on the left, The collapse will happen. In this case$(y=x)$, the collapse load for the frame was $W=148.63N,P=148.63N(Theoretical)$.
 
-\textit{Can you identify at which load each plastic hinge formed?}
+Based on the \autoref{f4} (ignoring the inaccurate data at the beginning), it can be analyzed that the first plastic hinge is formed at around 110 N, where a significant change can be observed in the slope of the W curve. The remaining plastic hinges are formed at around 120 N, where both the P and W segments exhibit drastic changes.
+
+%\textit{Can you identify at which load each plastic hinge formed?}
 
 
-\subsection*{b}
+\subsection*{B : explaination of plastic hinges}
 
 \begin{figure}[htbp]
     \centering
@@ -44,16 +46,20 @@ $\bullet$ The angle of rotation of the plastic collapse occurring at points 1,4 
 
 $\bullet$ The angle of rotation of the plastic collapse occurring at points 2,3 is $2\theta$(in \autoref{f2}), which is double that of points 1,4.
 
-\subsection*{c}
+\subsection*{C : compare the theoretical and actual}
 \subsubsection*{i}
 
-The theoretical plastic collapse load derived from Section 2 is 148.63N, while the actual collapse load is in the region of 110N.
+The theoretical plastic collapse load derived from Section 2 is 148.63N, while the actual collapse load is in the region of $110N$-$120N$.($23.8\%$)
 
 The comparison leads to the conclusion that the actual collapse load will be less than the theoretical value for these possible reasons:
 
-$\bullet$ Material inhomogeneity: there are microscopic defects, grain boundaries, organisation and other factors in the actual material, which can lead to differences in the mechanical properties of the material, thus affecting the plastic deformation and strength of the material.
+$\bullet$ \textbf{Geometric discrepancies:} The actual dimensions of the frame may differ from the theoretical dimensions, as seen in \autoref{t1}. These discrepancies may affect the frame's overall stiffness and load-carrying capacity.(theoretical $M_p=6.75N$ vs actual $M_p=8.67N$)
 
-$\bullet$ Differences in test conditions: The plastic collapse load of a material often needs to be determined experimentally, and differences in experimental conditions (e.g. temperature and humidity) can also affect the difference between the actual plastic collapse load and the theoretical value.
+$\bullet$ \textbf{Material imperfections:} The mild steel used in the experiment may contain imperfections like inclusions, voids, or uneven distribution of constituents, which could affect its mechanical properties and reduce its strength.
+
+$\bullet$ \textbf{Load application:} The loading rig's accuracy in applying the horizontal and vertical loads may impact the results. Inaccurate load distribution or misalignment could cause the frame to experience additional stresses, leading to a reduced collapse load.
+
+$\bullet$ \textbf{Measurement errors:} The gauges used to monitor the deflection of the frame might have inaccuracies, leading to discrepancies between the actual and recorded deflections.
 
 \subsubsection*{ii}
 
@@ -61,7 +67,7 @@ $\bullet$ There are 4 plastic hinges in theory (\autoref{f2}-Combined mechanism)
 
 $\bullet$ There are 4 plastic hinges in experiment (\autoref{f5}). The positions of the plastic hinges are in the position 1,2,3,4.
 
-$\bullet$ Compare with that, it is easy to obtain that the theoretical and practical positions of the plastic hinges are the same.
+$\bullet$ Compared with that, it is easy to see that the theoretical and actual positions of the plastic hinges are roughly the same.
 
 \subsubsection*{iii}
 
