--- a/Introduction/Introduction.tex
+++ b/Introduction/Introduction.tex
@@ -5,8 +5,14 @@
 
 The purpose of this experiment is to investigate the behaviour of a mild steel portal frame model when subjected to increasing loads.
 
-The rig consists of a loading system that applies a vertical load at the center of the beam and a horizontal load at the top of one column. 
+The rig consists of a loading system that applies a vertical load at the center of the beam and a horizontal load at the top of one column. As shown in \autoref{f0}.
 
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[width=7.5cm]{./fig/00.jpg}
+    \caption{Experimental procedure}
+    \label{f0}
+\end{figure}
 
 
 
