--- a/Introduction/Theory.tex
+++ b/Introduction/Theory.tex
@@ -5,13 +5,13 @@ The method of calculating the plastic moment is introduced in the powerpoint of 
 
 \begin{figure}
     \centering
-    \includegraphics[]{./fig/11.png}
+    \includegraphics[width=10cm]{./fig/11.png}
     \caption{plastic modules of rectangular section  }
     \label{f1}
 \end{figure}
 
 The plastic moment $M_p$ when all points in the section reached
-yield stress $\sigma_y$ is caculated by:
+yield stress $\sigma_y(250Mpa)$ is caculated by:
 
 \begin{equation} 
     M_p=\sigma_y\frac{bd}{2}(\frac{d}{4}+\frac{d}{4})
@@ -32,16 +32,16 @@ There are three cases of collapse of plasticity of portal frame. We use virtual 
 \end{figure}
 
 
-$\bullet$ Beam mechanism: If $W>>P$, the hinges are likely to appear in B, C and D.
+$\bullet$ \textbf{Beam mechanism:} If $W>>P$, the hinges are likely to appear in B, C and D.
 
 
 
-$\bullet$ Sway mechanism: If $P>>W$, the hinges are likely to appear in A, B, D and E.
+$\bullet$ \textbf{Sway mechanism:} If $P>>W$, the hinges are likely to appear in A, B, D and E.
 
 
 
 
-$\bullet$ Combined mechanism: If P $\approx$ W, the smallest moment
+$\bullet$ \textbf{Combined mechanism:} If P $\approx$ W, the smallest moment
 is at B (as moments due to P
 and W oppose each other), so
 hinges form at other possible
@@ -78,7 +78,7 @@ Plot the relationships P-W on a graph
 
 
 
-Substitude data from \autoref{t1} and \autoref{e1}, We have $\frac{M_p}{L}=28.9$ and the boundary of the graph is 
+Substitude data from \autoref{t1} and \autoref{e1}, We have $\frac{M_p}{L}=28.9N$ and the boundary of the graph.
 
 $$
 \left\{ \begin{array}{l}
@@ -96,7 +96,7 @@ $$
 	P=W\\
 \end{array} \right. 
 $$
-The solution to the equation is ($P=W=148.63$)
+The solution to the equation is ($P=W=148.63(N)$)
 where the coordinates of the load line and the boundary line are (148.63,148.63\label{ee}).
 
 
