--- a/Misc/preamble.tex
+++ b/Misc/preamble.tex
@@ -19,6 +19,7 @@
 \usepackage{booktabs}  % Behind-the-scenes optimization of tables. \toprule, \midrule, \bottomrule
 \usepackage{multirow}
 \usepackage{hyperref}  % Ability to click on references like equations, figures, sections etc. \ref{eq:my_eq} clickable
+\usepackage{times}
 \hypersetup{
     colorlinks,
     citecolor=black,
