--- a/main.tex
+++ b/main.tex
@@ -3,8 +3,8 @@
 \input{Misc/preamble.tex}
 %\linespread{1}
 \usepackage{setspace}
-\singlespacing %单倍行距
-\renewcommand{\baselinestretch}{1.5}
+\setstretch{1}
+%\renewcommand{\baselinestretch}{1.5}
 \title{
     Plastic Collapse of Portal Frame Lab  \\
     Group T05
